Fix rendering issues

--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,4 @@ Engine/third_party/vcpkg/installed/
 Engine/third_party/vcpkg/packages/
 compile_commands.json
 Engine/third_party/physx/tools/PhysXGpu_64.dll
+imgui.ini
