Initial changes for client server init.

--- a/imgui.ini
+++ b/imgui.ini
@@ -11,6 +11,14 @@ Pos=0,0
 Size=1280,720
 
 [Window][Debug Menu]
-Pos=87,73
-Size=575,226
+Pos=176,36
+Size=789,573
+
+[Window][Server Menu]
+Pos=0,0
+Size=1280,720
+
+[Window][Loading Menu]
+Pos=0,0
+Size=1280,720
 
