--- a/imgui.ini
+++ b/imgui.ini
@@ -12,5 +12,13 @@ Size=1280,720
 
 [Window][Debug Menu]
 Pos=1,3
-Size=413,131
+Size=455,387
+
+[Window][Input:]
+Pos=738,4
+Size=514,260
+
+[Window][Dear ImGui Demo]
+Pos=-425,-78
+Size=550,680
 
