player model moves and rotates

--- a/imgui.ini
+++ b/imgui.ini
@@ -11,7 +11,7 @@ Pos=0,0
 Size=1280,720
 
 [Window][Debug Menu]
-Pos=85,154
+Pos=94,157
 Size=455,387
 
 [Window][Input:]
@@ -21,4 +21,8 @@ Size=514,260
 [Window][Dear ImGui Demo]
 Pos=-425,-78
 Size=550,680
+
+[Window][Game:]
+Pos=60,60
+Size=456,200
 
