--- a/imgui.ini
+++ b/imgui.ini
@@ -11,8 +11,8 @@ Pos=0,0
 Size=1280,720
 
 [Window][Debug Menu]
-Pos=53,25
-Size=645,486
+Pos=3,2
+Size=388,358
 
 [Window][Input:]
 Pos=738,4
@@ -25,4 +25,8 @@ Size=550,680
 [Window][Game:]
 Pos=1124,27
 Size=456,190
+
+[Window][Game Debug]
+Pos=3,360
+Size=390,130
 
