before pulling main

--- a/imgui.ini
+++ b/imgui.ini
@@ -15,8 +15,9 @@ Pos=3,2
 Size=388,358
 
 [Window][Input:]
-Pos=738,4
-Size=514,260
+Pos=5,383
+Size=390,256
+Collapsed=1
 
 [Window][Dear ImGui Demo]
 Pos=-425,-78
