--- a/imgui.ini
+++ b/imgui.ini
@@ -4,7 +4,7 @@ Size=400,400
 
 [Window][Home Menu]
 Pos=0,0
-Size=1280,720
+Size=1920,974
 
 [Window][Settings Menu]
 Pos=0,0
@@ -29,4 +29,8 @@ Size=233,133
 [Window][Game Debug]
 Pos=3,360
 Size=390,130
+
+[Window][Texture Viewer]
+Pos=60,60
+Size=831,397
 
