--- a/imgui.ini
+++ b/imgui.ini
@@ -12,22 +12,63 @@ Size=1280,720
 
 [Window][Debug Menu]
 Pos=3,2
-Size=388,358
+Size=143,162
 
 [Window][Input:]
-Pos=5,383
-Size=390,256
-Collapsed=1
+Pos=14,192
+Size=380,353
 
 [Window][Dear ImGui Demo]
-Pos=-425,-78
-Size=550,680
+Pos=817,192
+Size=307,266
 
 [Window][Game:]
 Pos=1054,19
-Size=233,133
+Size=224,107
 
 [Window][Game Debug]
-Pos=3,360
-Size=390,130
+Pos=935,15
+Size=94,55
+
+[Window][Renderer Debug]
+Pos=389,3
+Size=406,230
+
+[Window][Animations Debug]
+Pos=386,532
+Size=383,136
+
+[Window][Game Stuff:]
+Pos=1105,7
+Size=252,94
+
+[Window][Gun Stuff:]
+Pos=8,661
+Size=143,101
+
+[Table][0xEA44DE71,3]
+RefScale=12
+Column 0  Weight=1.0000
+Column 1  Width=84
+Column 2  Width=126
+
+[Table][0x369EB90F,3]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+Column 2  Weight=1.0000
+
+[Table][0x2ACCE68A,3]
+RefScale=12
+Column 0  Width=56
+Column 1  Width=56
+Column 2  Width=56
+
+[Table][0x951FCC8A,6]
+RefScale=12
+Column 0  Width=24 Sort=0v
+Column 1  Width=39
+Column 2  Width=63
+Column 3  Width=50
+Column 4  Weight=1.0000
+Column 5  Width=-1
 
