--- a/imgui.ini
+++ b/imgui.ini
@@ -4,33 +4,45 @@ Size=400,400
 
 [Window][Home Menu]
 Pos=0,0
-Size=3840,2066
+Size=1280,720
 
 [Window][Settings Menu]
 Pos=0,0
-Size=3840,2066
+Size=1280,720
 
 [Window][Debug Menu]
 Pos=11,3
-Size=389,331
+Size=144,169
 
 [Window][Input:]
-Pos=738,4
-Size=514,260
+Pos=675,30
+Size=355,186
 
 [Window][Dear ImGui Demo]
-Pos=-425,-78
-Size=550,680
+Pos=1014,282
+Size=237,261
 
 [Window][Game:]
-Pos=3666,10
+Pos=1106,10
 Size=164,92
 
 [Window][Game Debug]
-Pos=3,360
-Size=390,130
+Pos=15,219
+Size=254,107
 
 [Window][Texture Viewer]
 Pos=60,60
 Size=831,397
+
+[Window][Gun Stuff:]
+Pos=1127,666
+Size=141,52
+
+[Window][Animations Debug]
+Pos=14,365
+Size=259,137
+
+[Window][Renderer Debug]
+Pos=320,27
+Size=324,263
 
