--- a/imgui.ini
+++ b/imgui.ini
@@ -13,6 +13,7 @@ Size=1280,720
 [Window][Debug Menu]
 Pos=11,3
 Size=144,169
+Collapsed=1
 
 [Window][Input:]
 Pos=675,30
@@ -23,13 +24,13 @@ Pos=1014,282
 Size=237,261
 
 [Window][Game:]
-Pos=1106,10
-Size=164,92
-
+Pos=1124,10
+Size=146,92
 
 [Window][Game Debug]
-Pos=15,219
+Pos=13,30
 Size=254,107
+Collapsed=1
 
 [Window][Texture Viewer]
 Pos=60,60
