Chanes for network. Make game Renderer a child of engine HsRenderer for use in backend .

--- a/imgui.ini
+++ b/imgui.ini
@@ -48,3 +48,11 @@ Size=259,137
 Pos=320,27
 Size=324,263
 
+[Window][Loading Menu]
+Pos=0,0
+Size=1280,720
+
+[Window][Server Menu]
+Pos=0,0
+Size=1280,720
+
