--- a/imgui.ini
+++ b/imgui.ini
@@ -25,12 +25,11 @@ Size=237,261
 
 [Window][Game:]
 Pos=1124,10
-Size=146,92
+Size=146,52
 
 [Window][Game Debug]
 Pos=13,30
 Size=254,107
-Collapsed=1
 
 [Window][Texture Viewer]
 Pos=60,60
@@ -55,4 +54,8 @@ Size=1280,720
 [Window][Server Menu]
 Pos=0,0
 Size=1280,720
+
+[Window][Multi Player:]
+Pos=60,60
+Size=32,32
 
