different gun models

--- a/imgui.ini
+++ b/imgui.ini
@@ -11,12 +11,13 @@ Pos=0,0
 Size=1280,720
 
 [Window][Debug Menu]
-Pos=11,3
-Size=144,169
+Pos=51,6
+Size=145,181
+Collapsed=1
 
 [Window][Input:]
-Pos=13,297
-Size=340,408
+Pos=26,257
+Size=351,414
 
 [Window][Dear ImGui Demo]
 Pos=819,109
@@ -27,8 +28,8 @@ Pos=1124,10
 Size=146,92
 
 [Window][Game Debug]
-Pos=13,173
-Size=254,123
+Pos=1019,117
+Size=254,164
 
 [Window][Texture Viewer]
 Pos=60,60
@@ -39,10 +40,15 @@ Pos=1121,646
 Size=141,52
 
 [Window][Animations Debug]
-Pos=467,99
+Pos=10,232
 Size=259,137
 
 [Window][Renderer Debug]
-Pos=320,27
-Size=324,263
+Pos=497,25
+Size=369,256
+
+[Window][Network Debug]
+Pos=12,199
+Size=168,32
+Collapsed=1
 
