--- a/imgui.ini
+++ b/imgui.ini
@@ -18,6 +18,7 @@ Collapsed=1
 [Window][Input:]
 Pos=26,257
 Size=351,414
+Collapsed=1
 
 [Window][Dear ImGui Demo]
 Pos=819,109
@@ -28,7 +29,7 @@ Pos=1124,10
 Size=146,92
 
 [Window][Game Debug]
-Pos=1019,117
+Pos=28,60
 Size=254,164
 
 [Window][Texture Viewer]
