--- a/imgui.ini
+++ b/imgui.ini
@@ -8,15 +8,15 @@ Size=1280,720
 
 [Window][Settings Menu]
 Pos=0,0
-Size=1280,720
+Size=3840,2089
 
 [Window][Debug Menu]
-Pos=51,6
+Pos=22,5
 Size=145,181
 Collapsed=1
 
 [Window][Input:]
-Pos=26,257
+Pos=28,237
 Size=351,414
 Collapsed=1
 
@@ -25,19 +25,20 @@ Pos=819,109
 Size=409,318
 
 [Window][Game:]
-Pos=1124,10
-Size=146,92
+Pos=3639,10
+Size=191,138
 
 [Window][Game Debug]
-Pos=28,60
+Pos=28,211
 Size=254,164
+Collapsed=1
 
 [Window][Texture Viewer]
 Pos=60,60
 Size=831,397
 
 [Window][Gun Stuff:]
-Pos=1121,646
+Pos=3689,2027
 Size=141,52
 
 [Window][Animations Debug]
