Completed multiplayer. Timer made if a player is killed. Added Core/Log.hpp to only print messages to cmd line if in debug mode.

--- a/imgui.ini
+++ b/imgui.ini
@@ -4,11 +4,11 @@ Size=400,400
 
 [Window][Home Menu]
 Pos=0,0
-Size=956,961
+Size=1280,720
 
 [Window][Settings Menu]
 Pos=0,0
-Size=1280,720
+Size=960,1059
 
 [Window][Debug Menu]
 Pos=11,3
@@ -24,7 +24,7 @@ Pos=1014,282
 Size=237,261
 
 [Window][Game:]
-Pos=800,10
+Pos=1124,10
 Size=146,52
 
 [Window][Game Debug]
@@ -36,7 +36,7 @@ Pos=60,60
 Size=831,397
 
 [Window][Gun Stuff:]
-Pos=805,899
+Pos=1129,658
 Size=141,52
 
 [Window][Animations Debug]
@@ -49,7 +49,7 @@ Size=324,263
 
 [Window][Loading Menu]
 Pos=0,0
-Size=956,961
+Size=1280,720
 
 [Window][Server Menu]
 Pos=0,0
@@ -58,4 +58,8 @@ Size=1280,720
 [Window][Multi Player:]
 Pos=60,60
 Size=32,32
+
+[Window][Game Timer]
+Pos=515,334
+Size=250,52
 
