--- a/imgui.ini
+++ b/imgui.ini
@@ -11,9 +11,8 @@ Pos=0,0
 Size=1280,720
 
 [Window][Debug Menu]
-Pos=11,3
-Size=144,169
-Collapsed=1
+Pos=11,4
+Size=144,168
 
 [Window][Input:]
 Pos=675,30
@@ -28,8 +27,9 @@ Pos=1124,10
 Size=146,52
 
 [Window][Game Debug]
-Pos=13,30
+Pos=10,30
 Size=254,107
+Collapsed=1
 
 [Window][Texture Viewer]
 Pos=60,60
@@ -62,4 +62,8 @@ Size=32,32
 [Window][Game Timer]
 Pos=515,334
 Size=250,52
+
+[Window][Network Debug]
+Pos=60,60
+Size=178,366
 
